# pali-course

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html  index_workspace.css  package.json  rollup.config.js
src/: lib.rs  main.js
src/app/: app.rs  mod.rs
src/contexts/: button.rs  cell.rs  exercise.rs  lesson.rs  mod.rs  runner.rs  table.rs  theme.rs  toolbar.rs
static/: index.css  index.html  index_workspace.css
