[package]
name = "yew-temp"
version = "0.1.0"
edition = "2021"
#proc-macro = true

#[profile.release]
#lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "EventTarget", "HtmlElement", "Node", "HtmlSelectElement"] }
stylist = { version = "0.11.0", features = ["yew_integration"] }
once_cell = "1.15"
console_error_panic_hook = "0.1.7"
