[package]
name = "yew-pali"
version = "0.1.0"
edition = "2021"
#proc-macro = true

#[profile.release]
#lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["Element", "EventTarget", "HtmlElement", "Node", "HtmlSelectElement"] }
stylist = { version = "0.11.0", features = ["yew_integration"] }
once_cell = "1.15"
console_error_panic_hook = "0.1.7"
yew-macro = "0.20.0"
gloo-net = { version = "0.3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
serde-wasm-bindgen = "0.4"
#anyhow = "1.0.72"
yew-router = "0.17"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.11.0"
